# wearable-recorder

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  west.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: bsim-nightly.yml  bsim.yml  build-scratch.yml  build.yml  mobile.yml  power-predict-nightly.yml  tools.yml
app/include/: wr_battery.h  wr_battery_service.h  wr_chunk_logic.h  wr_fifo_logic.h  wr_led_pick.h  wr_msc_mode_logic.h
app/overlay/: spisd-fixup.conf
app/patches/: 0001-plan-b-fanout-tx-queue.patch  0002-cmake-add-app-sources.patch  0003-msc-mode-gate-audio.patch  0004-battery-service-init.patch  0005-sd-mount-non-fatal.patch  0006-log-disconnect-reason.patch  0007-pusher-idle-sleep.patch  0008-silence-pusher-spam.patch  0009-silence-audio-broadcast-spam.patch  0010-watchdog-pusher-heartbeat.patch  (+46 more)
app_mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
docs/: ai_audit-2026-06-27.md  ai_stack_audit-2026-06-27.md  bsim-setup.md  phase5-quickstart.md  phase6-plan-draft.md  wearable-recorder-spec.md
firmware/: CMakeLists.txt  Kconfig  prj.conf
tests/bsim/wr_link/: CMakeLists.txt  prj.conf
tests/bsim/wr_link/src/: central.c  main.c  peripheral.c  wr_bs_utils.c  wr_bs_utils.h
tests/bsim/wr_link/test_scripts/: _compile.sh  _env.sh  run_link.sh
tests/bsim/wr_smoke/: CMakeLists.txt  prj.conf
tests/bsim/wr_smoke/src/: main.c
tests/bsim/wr_smoke/test_scripts/: _compile.sh  _env.sh  run_smoke.sh
tests/firmware/wr_battery_service/: CMakeLists.txt  testcase.yaml
tests/firmware/wr_battery_service/src/: main.c
tests/firmware/wr_led/: CMakeLists.txt  testcase.yaml
tests/firmware/wr_led/src/: main.c
tools/: README.md  decode-dump.py  power-predict.py  test_decode_dump.py  test_power_predict.py
(+67 files in other folders)
